--- a/src/gui/FXML.fxml
+++ b/src/gui/FXML.fxml
@@ -9,114 +9,141 @@
 
 <AnchorPane fx:id="mainPane" focusTraversable="true" prefHeight="842.0" prefWidth="839.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.GUIController">
    <children>
-      <VBox prefHeight="200.0" prefWidth="100.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <StackPane AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <TabPane fx:id="tabPane" prefHeight="772.0" prefWidth="701.0" tabClosingPolicy="UNAVAILABLE">
-              <tabs>
-                <Tab fx:id="taskTab" onSelectionChanged="#handleTaskTabClicked" text="Tasks">
-                  <content>
-                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
-                           <children>
-                              <VBox prefHeight="200.0" prefWidth="100.0" spacing="5.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+            <VBox prefHeight="200.0" prefWidth="100.0">
+               <children>
+                  <TabPane fx:id="tabPane" prefHeight="772.0" prefWidth="701.0" tabClosingPolicy="UNAVAILABLE">
+                    <tabs>
+                      <Tab fx:id="taskTab" onSelectionChanged="#handleTaskTabClicked" text="Tasks">
+                        <content>
+                          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                                  <children>
-                                    <Label text="To-Do">
-                                       <font>
-                                          <Font name="System Bold" size="20.0" />
-                                       </font>
-                                    </Label>
-                                    <TableView fx:id="taskTable" fixedCellSize="0.0" VBox.vgrow="ALWAYS">
-                                      <columns>
-                                        <TableColumn fx:id="taskIDCol" maxWidth="-1.0" minWidth="40.0" prefWidth="40.0" text="ID" />
-                                        <TableColumn fx:id="taskTitleCol" minWidth="300.0" prefWidth="300.0" sortable="false" text="Title" />
-                                          <TableColumn fx:id="taskDueDateCol" minWidth="200.0" prefWidth="200.0" sortable="false" text="Due Date" />
-                                          <TableColumn fx:id="taskTagsCol" minWidth="200.0" prefWidth="200.0" sortable="false" text="Tags" />
-                                          <TableColumn fx:id="taskPriorityCol" maxWidth="-1.0" minWidth="60.0" prefWidth="60.0" sortable="false" text="Priority" />
-                                      </columns>
-                                       <columnResizePolicy>
-                                          <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-                                       </columnResizePolicy>
-                                    </TableView>
-                                    <Label text="Done">
-                                       <font>
-                                          <Font name="System Bold" size="20.0" />
-                                       </font>
-                                    </Label>
-                                    <TableView fx:id="taskDoneTable" fixedCellSize="0.0" layoutX="10.0" layoutY="45.0">
-                                       <columns>
-                                          <TableColumn fx:id="taskDoneIDCol" maxWidth="-1.0" minWidth="40.0" prefWidth="40.0" sortable="false" text="ID" />
-                                          <TableColumn fx:id="taskDoneTitleCol" minWidth="300.0" prefWidth="300.0" sortable="false" text="Title" />
-                                          <TableColumn fx:id="taskDoneDueDateCol" minWidth="200.0" prefWidth="200.0" sortable="false" text="Due Date" />
-                                          <TableColumn fx:id="taskDoneTagsCol" minWidth="200.0" prefWidth="200.0" sortable="false" text="Tags" />
-                                          <TableColumn fx:id="taskDonePriorityCol" maxWidth="-1.0" minWidth="60.0" prefWidth="60.0" resizable="false" sortable="false" text="Priority" />
-                                       </columns>
-                                       <columnResizePolicy>
-                                          <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-                                       </columnResizePolicy>
-                                    </TableView>
+                                    <VBox prefHeight="200.0" prefWidth="100.0" spacing="5.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                       <children>
+                                          <Label text="To-Do">
+                                             <font>
+                                                <Font name="System Bold" size="20.0" />
+                                             </font>
+                                          </Label>
+                                          <TableView fx:id="taskTable" fixedCellSize="0.0" VBox.vgrow="ALWAYS">
+                                            <columns>
+                                              <TableColumn fx:id="taskIDCol" maxWidth="-1.0" minWidth="40.0" prefWidth="40.0" text="ID" />
+                                              <TableColumn fx:id="taskTitleCol" minWidth="300.0" prefWidth="300.0" sortable="false" text="Title" />
+                                                <TableColumn fx:id="taskDueDateCol" minWidth="200.0" prefWidth="200.0" sortable="false" text="Due Date" />
+                                                <TableColumn fx:id="taskTagsCol" minWidth="200.0" prefWidth="200.0" sortable="false" text="Tags" />
+                                                <TableColumn fx:id="taskPriorityCol" maxWidth="-1.0" minWidth="60.0" prefWidth="60.0" sortable="false" text="Priority" />
+                                            </columns>
+                                             <columnResizePolicy>
+                                                <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                                             </columnResizePolicy>
+                                          </TableView>
+                                          <Label text="Done">
+                                             <font>
+                                                <Font name="System Bold" size="20.0" />
+                                             </font>
+                                          </Label>
+                                          <TableView fx:id="taskDoneTable" fixedCellSize="0.0" layoutX="10.0" layoutY="45.0">
+                                             <columns>
+                                                <TableColumn fx:id="taskDoneIDCol" maxWidth="-1.0" minWidth="40.0" prefWidth="40.0" sortable="false" text="ID" />
+                                                <TableColumn fx:id="taskDoneTitleCol" minWidth="300.0" prefWidth="300.0" sortable="false" text="Title" />
+                                                <TableColumn fx:id="taskDoneDueDateCol" minWidth="200.0" prefWidth="200.0" sortable="false" text="Due Date" />
+                                                <TableColumn fx:id="taskDoneTagsCol" minWidth="200.0" prefWidth="200.0" sortable="false" text="Tags" />
+                                                <TableColumn fx:id="taskDonePriorityCol" maxWidth="-1.0" minWidth="60.0" prefWidth="60.0" resizable="false" sortable="false" text="Priority" />
+                                             </columns>
+                                             <columnResizePolicy>
+                                                <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                                             </columnResizePolicy>
+                                          </TableView>
+                                       </children>
+                                    </VBox>
                                  </children>
-                              </VBox>
+                              </AnchorPane>
+                        </content>
+                      </Tab>
+                      <Tab fx:id="eventTab" onSelectionChanged="#handleEventTabClicked" text="Events">
+                        <content>
+                          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                                 <children>
+                                    <VBox prefHeight="200.0" prefWidth="100.0" spacing="5.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                       <children>
+                                          <Label text="Upcoming Events">
+                                             <font>
+                                                <Font name="System Bold" size="20.0" />
+                                             </font>
+                                          </Label>
+                                          <TableView fx:id="eventTable" VBox.vgrow="ALWAYS">
+                                             <columns>
+                                                <TableColumn fx:id="eventIDCol" maxWidth="40.0" minWidth="40.0" prefWidth="40.0" text="ID" />
+                                                <TableColumn fx:id="eventTitleCol" minWidth="250.0" prefWidth="250.0" sortable="false" text="Title" />
+                                                <TableColumn fx:id="eventStartDateCol" minWidth="125.0" prefWidth="125.0" sortable="false" text="Start Date" />
+                                                <TableColumn fx:id="eventEndDateCol" minWidth="125.0" prefWidth="125.0" sortable="false" text="End Date" />
+                                                <TableColumn fx:id="eventTagsCol" minWidth="100.0" prefWidth="100.0" sortable="false" text="Tags" />
+                                                <TableColumn fx:id="eventPriorityCol" minWidth="30.0" prefWidth="30.0" sortable="false" text="Priority" />
+                                             </columns>
+                                             <columnResizePolicy>
+                                                <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                                             </columnResizePolicy>
+                                          </TableView>
+                                          <Label text="Past Events">
+                                             <font>
+                                                <Font name="System Bold" size="20.0" />
+                                             </font>
+                                          </Label>
+                                          <TableView fx:id="eventDoneTable" layoutX="10.0" layoutY="45.0">
+                                             <columns>
+                                                <TableColumn fx:id="eventDoneIDCol" maxWidth="40.0" minWidth="40.0" prefWidth="40.0" sortable="false" text="ID" />
+                                                <TableColumn fx:id="eventDoneTitleCol" minWidth="250.0" prefWidth="250.0" sortable="false" text="Title" />
+                                                <TableColumn fx:id="eventDoneStartDateCol" minWidth="125.0" prefWidth="125.0" sortable="false" text="Start Date" />
+                                                <TableColumn fx:id="eventDoneEndDateCol" minWidth="125.0" prefWidth="125.0" sortable="false" text="End Date" />
+                                                <TableColumn fx:id="eventDoneTagsCol" minWidth="100.0" prefWidth="100.0" sortable="false" text="Tags" />
+                                                <TableColumn fx:id="eventDonePriorityCol" minWidth="30.0" prefWidth="30.0" sortable="false" text="Priority" />
+                                             </columns>
+                                             <columnResizePolicy>
+                                                <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                                             </columnResizePolicy>
+                                          </TableView>
+                                       </children>
+                                    </VBox>
+                                 </children>
+                              </AnchorPane>
+                        </content>
+                      </Tab>
+                    </tabs>
+                  </TabPane>
+                  <Label fx:id="messageLabel" focusTraversable="false" prefHeight="31.0" prefWidth="1141.0" wrapText="true">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                  </Label>
+                  <TextField fx:id="commandLineField" onKeyPressed="#onEnterPressed" prefHeight="31.0" prefWidth="1019.0" />
+               </children>
+               <padding>
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+               </padding>
+            </VBox>
+            <AnchorPane prefHeight="200.0" prefWidth="200.0" />
+            <AnchorPane fx:id="helpPane" stylesheets="@help.css" visible="false">
+               <children>
+                  <ScrollPane prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                     <content>
+                        <TextFlow>
+                           <children>
+                              <Label fx:id="headerLabel" styleClass="header-style" text="Label" />
+                              <Label fx:id="bodyLabel" styleClass="body-style" text="Label" />
                            </children>
-                        </AnchorPane>
-                  </content>
-                </Tab>
-                <Tab fx:id="eventTab" onSelectionChanged="#handleEventTabClicked" text="Events">
-                  <content>
-                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
-                           <children>
-                              <VBox prefHeight="200.0" prefWidth="100.0" spacing="5.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                                 <children>
-                                    <Label text="Upcoming Events">
-                                       <font>
-                                          <Font name="System Bold" size="20.0" />
-                                       </font>
-                                    </Label>
-                                    <TableView fx:id="eventTable" VBox.vgrow="ALWAYS">
-                                       <columns>
-                                          <TableColumn fx:id="eventIDCol" maxWidth="40.0" minWidth="40.0" prefWidth="40.0" text="ID" />
-                                          <TableColumn fx:id="eventTitleCol" minWidth="250.0" prefWidth="250.0" sortable="false" text="Title" />
-                                          <TableColumn fx:id="eventStartDateCol" minWidth="125.0" prefWidth="125.0" sortable="false" text="Start Date" />
-                                          <TableColumn fx:id="eventEndDateCol" minWidth="125.0" prefWidth="125.0" sortable="false" text="End Date" />
-                                          <TableColumn fx:id="eventTagsCol" minWidth="100.0" prefWidth="100.0" sortable="false" text="Tags" />
-                                          <TableColumn fx:id="eventPriorityCol" minWidth="30.0" prefWidth="30.0" sortable="false" text="Priority" />
-                                       </columns>
-                                       <columnResizePolicy>
-                                          <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-                                       </columnResizePolicy>
-                                    </TableView>
-                                    <Label text="Done">
-                                       <font>
-                                          <Font name="System Bold" size="20.0" />
-                                       </font>
-                                    </Label>
-                                    <TableView fx:id="eventDoneTable" layoutX="10.0" layoutY="45.0">
-                                       <columns>
-                                          <TableColumn fx:id="eventDoneIDCol" maxWidth="40.0" minWidth="40.0" prefWidth="40.0" sortable="false" text="ID" />
-                                          <TableColumn fx:id="eventDoneTitleCol" minWidth="250.0" prefWidth="250.0" sortable="false" text="Title" />
-                                          <TableColumn fx:id="eventDoneStartDateCol" minWidth="125.0" prefWidth="125.0" sortable="false" text="Start Date" />
-                                          <TableColumn fx:id="eventDoneEndDateCol" minWidth="125.0" prefWidth="125.0" sortable="false" text="End Date" />
-                                          <TableColumn fx:id="eventDoneTagsCol" minWidth="100.0" prefWidth="100.0" sortable="false" text="Tags" />
-                                          <TableColumn fx:id="eventDonePriorityCol" minWidth="30.0" prefWidth="30.0" sortable="false" text="Priority" />
-                                       </columns>
-                                       <columnResizePolicy>
-                                          <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-                                       </columnResizePolicy>
-                                    </TableView>
-                                 </children>
-                              </VBox>
-                           </children></AnchorPane>
-                  </content>
-                </Tab>
-              </tabs>
-            </TabPane>
-            <Label fx:id="messageLabel" focusTraversable="false" prefHeight="31.0" prefWidth="1141.0" wrapText="true">
-               <font>
-                  <Font size="18.0" />
-               </font></Label>
-            <TextField fx:id="commandLineField" onKeyPressed="#onEnterPressed" prefHeight="31.0" prefWidth="1019.0" />
+                        </TextFlow>
+                     </content>
+                     <padding>
+                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                     </padding>
+                  </ScrollPane>
+               </children>
+               <StackPane.margin>
+                  <Insets bottom="200.0" left="200.0" right="200.0" top="200.0" />
+               </StackPane.margin>
+            </AnchorPane>
          </children>
-         <padding>
-            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-         </padding>
-      </VBox>
+      </StackPane>
    </children>
 </AnchorPane>
