--- a/src/gui/FXML.fxml
+++ b/src/gui/FXML.fxml
@@ -13,7 +13,7 @@
          <children>
             <AnchorPane fx:id="mainPane" prefHeight="200.0" prefWidth="200.0">
                <children>
-                  <VBox focusTraversable="true" prefHeight="842.0" prefWidth="839.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                  <VBox focusTraversable="true" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                      <children>
                         <TabPane fx:id="tabPane" prefHeight="772.0" prefWidth="701.0" tabClosingPolicy="UNAVAILABLE">
                           <tabs>
@@ -31,10 +31,10 @@
                                                 <TableView fx:id="taskTable" fixedCellSize="0.0" VBox.vgrow="ALWAYS">
                                                   <columns>
                                                     <TableColumn fx:id="taskIDCol" maxWidth="-1.0" minWidth="40.0" prefWidth="40.0" text="ID" />
-                                                    <TableColumn fx:id="taskTitleCol" minWidth="300.0" prefWidth="300.0" sortable="false" text="Title" />
-                                                      <TableColumn fx:id="taskDueDateCol" minWidth="200.0" prefWidth="200.0" sortable="false" text="Due Date" />
-                                                      <TableColumn fx:id="taskTagsCol" minWidth="200.0" prefWidth="200.0" sortable="false" text="Tags" />
-                                                      <TableColumn fx:id="taskPriorityCol" maxWidth="-1.0" minWidth="60.0" prefWidth="60.0" sortable="false" text="Priority" />
+                                                    <TableColumn fx:id="taskTitleCol" minWidth="250.0" prefWidth="300.0" sortable="false" text="Title" />
+                                                      <TableColumn fx:id="taskDueDateCol" minWidth="150.0" prefWidth="200.0" sortable="false" text="Due Date" />
+                                                      <TableColumn fx:id="taskTagsCol" minWidth="150.0" prefWidth="200.0" sortable="false" text="Tags" />
+                                                      <TableColumn fx:id="taskPriorityCol" maxWidth="-1.0" minWidth="60.0" prefWidth="100.0" sortable="false" text="Priority" />
                                                   </columns>
                                                    <columnResizePolicy>
                                                       <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -45,13 +45,13 @@
                                                       <Font name="System Bold" size="20.0" />
                                                    </font>
                                                 </Label>
-                                                <TableView fx:id="taskDoneTable" fixedCellSize="0.0" layoutX="10.0" layoutY="45.0">
+                                                <TableView fx:id="taskDoneTable" fixedCellSize="0.0" layoutX="10.0" layoutY="45.0" VBox.vgrow="ALWAYS">
                                                    <columns>
                                                       <TableColumn fx:id="taskDoneIDCol" maxWidth="-1.0" minWidth="40.0" prefWidth="40.0" sortable="false" text="ID" />
-                                                      <TableColumn fx:id="taskDoneTitleCol" minWidth="300.0" prefWidth="300.0" sortable="false" text="Title" />
-                                                      <TableColumn fx:id="taskDoneDueDateCol" minWidth="200.0" prefWidth="200.0" sortable="false" text="Due Date" />
-                                                      <TableColumn fx:id="taskDoneTagsCol" minWidth="200.0" prefWidth="200.0" sortable="false" text="Tags" />
-                                                      <TableColumn fx:id="taskDonePriorityCol" maxWidth="-1.0" minWidth="60.0" prefWidth="60.0" resizable="false" sortable="false" text="Priority" />
+                                                      <TableColumn fx:id="taskDoneTitleCol" minWidth="250.0" prefWidth="300.0" sortable="false" text="Title" />
+                                                      <TableColumn fx:id="taskDoneDueDateCol" minWidth="150.0" prefWidth="200.0" sortable="false" text="Due Date" />
+                                                      <TableColumn fx:id="taskDoneTagsCol" minWidth="150.0" prefWidth="200.0" sortable="false" text="Tags" />
+                                                      <TableColumn fx:id="taskDonePriorityCol" maxWidth="-1.0" minWidth="60.0" prefWidth="100.0" resizable="false" sortable="false" text="Priority" />
                                                    </columns>
                                                    <columnResizePolicy>
                                                       <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -77,7 +77,7 @@
                                                 <TableView fx:id="eventTable" VBox.vgrow="ALWAYS">
                                                    <columns>
                                                       <TableColumn fx:id="eventIDCol" maxWidth="40.0" minWidth="40.0" prefWidth="40.0" text="ID" />
-                                                      <TableColumn fx:id="eventTitleCol" minWidth="250.0" prefWidth="250.0" sortable="false" text="Title" />
+                                                      <TableColumn fx:id="eventTitleCol" minWidth="250.0" prefWidth="300.0" sortable="false" text="Title" />
                                                       <TableColumn fx:id="eventStartDateCol" minWidth="125.0" prefWidth="125.0" sortable="false" text="Start Date" />
                                                       <TableColumn fx:id="eventEndDateCol" minWidth="125.0" prefWidth="125.0" sortable="false" text="End Date" />
                                                       <TableColumn fx:id="eventTagsCol" minWidth="100.0" prefWidth="100.0" sortable="false" text="Tags" />
@@ -95,7 +95,7 @@
                                                 <TableView fx:id="eventDoneTable" layoutX="10.0" layoutY="45.0">
                                                    <columns>
                                                       <TableColumn fx:id="eventDoneIDCol" maxWidth="40.0" minWidth="40.0" prefWidth="40.0" sortable="false" text="ID" />
-                                                      <TableColumn fx:id="eventDoneTitleCol" minWidth="250.0" prefWidth="250.0" sortable="false" text="Title" />
+                                                      <TableColumn fx:id="eventDoneTitleCol" minWidth="250.0" prefWidth="300.0" sortable="false" text="Title" />
                                                       <TableColumn fx:id="eventDoneStartDateCol" minWidth="125.0" prefWidth="125.0" sortable="false" text="Start Date" />
                                                       <TableColumn fx:id="eventDoneEndDateCol" minWidth="125.0" prefWidth="125.0" sortable="false" text="End Date" />
                                                       <TableColumn fx:id="eventDoneTagsCol" minWidth="100.0" prefWidth="100.0" sortable="false" text="Tags" />
@@ -125,7 +125,7 @@
                      </padding>
                   </VBox>
                </children></AnchorPane>
-            <AnchorPane fx:id="helpPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="400.0" stylesheets="@help.css" StackPane.alignment="CENTER">
+            <AnchorPane fx:id="helpPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="400.0" stylesheets="@help.css" visible="false" StackPane.alignment="CENTER">
                <children>
                   <ScrollPane focusTraversable="false" prefHeight="442.0" prefWidth="439.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                     <content>
