--- a/src/gui/FXML.fxml
+++ b/src/gui/FXML.fxml
@@ -125,22 +125,29 @@
                      </padding>
                   </VBox>
                </children></AnchorPane>
-            <AnchorPane fx:id="helpPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="400.0" stylesheets="@help.css" visible="false" StackPane.alignment="CENTER">
+            <AnchorPane fx:id="helpPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="400.0" stylesheets="@help.css" StackPane.alignment="CENTER">
                <children>
                   <ScrollPane focusTraversable="false" prefHeight="442.0" prefWidth="439.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                     <content>
                       <AnchorPane maxHeight="1.7976931348623157E308" minHeight="0.0" minWidth="0.0" prefWidth="380.0">
                            <children>
-                              <TextFlow prefWidth="380.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                              <VBox AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                  <children>
-                                    <VBox>
+                                    <AnchorPane>
                                        <children>
-                                          <Label fx:id="headerLabel" focusTraversable="false" styleClass="header-style" text="Label" wrapText="true" />
-                                          <Label fx:id="bodyLabel" focusTraversable="false" styleClass="body-style" text="Label" wrapText="true" />
+                                          <Label fx:id="headerLabel" focusTraversable="false" styleClass="header-style" text="Label" wrapText="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
                                        </children>
-                                    </VBox>
+                                    </AnchorPane>
+                                    <AnchorPane VBox.vgrow="ALWAYS">
+                                       <children>
+                                          <Label fx:id="bodyLabel" focusTraversable="false" styleClass="body-style" text="Label" wrapText="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                                       </children>
+                                       <VBox.margin>
+                                          <Insets />
+                                       </VBox.margin>
+                                    </AnchorPane>
                                  </children>
-                              </TextFlow>
+                              </VBox>
                            </children>
                            <padding>
                               <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
